force-app/main/default/objects/AR_Applied_For__c/fields/Amount_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Delayed__c</fullName>
    <formula>Invoice__r.Amount__c -  Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Delayed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>