force-app/main/default/objects/AR_Applied_For__c/fields/Applied_For_Code__c.field-meta.xml
<CustomField>
    <fullName>Applied_For_Code__c</fullName>
    <formula>Invoice__r.Invoice_Code__c +&apos;-&apos;+ Receipt__r.Receipt_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied For Code</label>
    <type>Text</type>
</CustomField>