force-app/main/default/objects/AR_Applied_For__c/fields/Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code__c</fullName>
    <formula>Invoice__r.Charge_Code_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Code</label>
    <type>Text</type>
</CustomField>