force-app/main/default/objects/AR_Applied_For__c/fields/Cheque_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Reconciled</label>
    <type>Checkbox</type>
</CustomField>