force-app/main/default/objects/AR_Applied_For__c/fields/Create_Force_FT__c.field-meta.xml
<CustomField>
    <fullName>Create_Force_FT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Force FT</label>
    <type>Checkbox</type>
</CustomField>