force-app/main/default/objects/AR_Applied_For__c/fields/Creation_Supply_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Supply_Date__c</fullName>
    <label>Creation Supply Date</label>
    <type>Date</type>
</CustomField>