force-app/main/default/objects/AR_Applied_For__c/fields/Dummy_Update__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Update__c</fullName>
    <label>Dummy Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>