force-app/main/default/objects/AR_Applied_For__c/fields/Incremental_Month__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Month__c</fullName>
    <label>Incremental Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incremental_Month</valueSetName>
    </valueSet>
</CustomField>