force-app/main/default/objects/AR_Applied_For__c/fields/Invoice_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Code__c</fullName>
    <formula>Invoice__r.Invoice_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Code</label>
    <type>Text</type>
</CustomField>