force-app/main/default/objects/AR_Applied_For__c/fields/Is_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Is_Cheque__c</fullName>
    <formula>TEXT(Receipt__r.Payment_Type__c) == &apos;Cheque&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cheque</label>
    <type>Checkbox</type>
</CustomField>