force-app/main/default/objects/AR_Applied_For__c/fields/Is_Cross_Application__c.field-meta.xml
<CustomField>
    <fullName>Is_Cross_Application__c</fullName>
    <formula>(
NOT(ISBLANK(Receipt__r.Account__c)) &amp;&amp; NOT(ISBLANK(Invoice__r.Account__c)) &amp;&amp; Receipt__r.Account__c!= Invoice__r.Account__c &amp;&amp; ISPICKVAL(Incremental_Month__c,&apos;February&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cross Application</label>
    <type>Checkbox</type>
</CustomField>