force-app/main/default/objects/AR_Applied_For__c/fields/Is_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Is_Incremental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used to check whether Data is of Jan delta i.e. Incremental</description>
    <label>Is Incremental</label>
    <type>Checkbox</type>
</CustomField>