force-app/main/default/objects/AR_Applied_For__c/fields/Opportunity_Associated__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Associated__c</fullName>
    <formula>CASESAFEID(Receipt__r.Opportunity__c)</formula>
    <label>Opportunity Associated</label>
    <type>Text</type>
</CustomField>