force-app/main/default/objects/AR_Applied_For__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <referenceTo>AR_Receipt__c</referenceTo>
    <relationshipName>Applied_For</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>