force-app/main/default/objects/AR_Applied_For__c/fields/Receipt_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Payment_Date__c</fullName>
    <formula>Receipt__r.Payment_Date__c</formula>
    <label>Receipt Payment Date</label>
    <type>Date</type>
</CustomField>