force-app/main/default/objects/AR_Applied_For__c/fields/Run_Historical_Applied__c.field-meta.xml
<CustomField>
    <fullName>Run_Historical_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Historical Applied</label>
    <type>Checkbox</type>
</CustomField>