force-app/main/default/objects/AR_Applied_For__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>The field is used to store the source of records that have been migrated.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_System</valueSetName>
    </valueSet>
</CustomField>