force-app/main/default/objects/AR_Applied_For__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Unapplied</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
                <isActive>false</isActive>
                <label>Reversed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>