force-app/main/default/objects/AR_Applied_For__c/fields/Updated_Supply_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Supply_Date__c</fullName>
    <label>Updated Supply Date</label>
    <type>Date</type>
</CustomField>